apps/change-detection/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: change-detection-auth
spec:
  basicAuth:
    secret: change-detection-auth-secret
