apps/change-detection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: change-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: change-detection
  template:
    metadata:
      labels:
        app: change-detection
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: change-detection-cm
          image: lscr.io/linuxserver/changedetection.io:0.60.3-ls311
          name: change-detection
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /config
              name: change-detection-pv
      volumes:
        - name: change-detection-pv
          persistentVolumeClaim:
            claimName: change-detection-pvc
