apps/change-detection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: change-detection
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: change-detection
