apps/change-detection/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: change-detection-route

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - 'changedetection.hridaya.tech'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io/
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            remove:
              - Origin
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: change-detection-auth
      backendRefs:
        - group: ''
          kind: Service
          name: change-detection
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: change-detection-auth
      backendRefs:
        - group: ''
          kind: Service
          name: change-detection
          port: 80
          weight: 1
